Add basic structure
Added basic structure of an image sidebar and the main section
where all the info will be placed (and hence the sign up form).

--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div class="main-container">
+    <img class="image-sidebar" src="Assets/halie-west-25xggax4bSA-unsplash.jpg" alt="Foliage">
+    <div class="info-section"></div>
+  </div>
 </body>
 </html>
