Change sidebar layout

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
   <div class="main-container">
-    <img class="image-sidebar" src="Assets/halie-west-25xggax4bSA-unsplash.jpg" alt="Foliage">
+    <div class="image-sidebar">
+      <img src="Assets/halie-west-25xggax4bSA-unsplash.jpg" alt="Foliage">
+    </div>
     <div class="info-section"></div>
   </div>
 </body>
