Add logo to sidebar

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   <div class="main-container">
     <div class="image-sidebar">
       <img src="Assets/halie-west-25xggax4bSA-unsplash.jpg" alt="Foliage">
+      <div class="logo-container">
+        <img class="odin-logo" src="Assets/odin-lined.png" 
+        alt="Odin Project Logo">
+        <h1 class="odin-heading">ODIN</h1>
+      </div>
     </div>
     <div class="info-section"></div>
   </div>
