Add image credit

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
         alt="Odin Project Logo">
         <h1 class="odin-heading">ODIN</h1>
       </div>
+      <div class="image-credit">Photo by 
+        <a href="https://unsplash.com/photos/green-leaf-plant-in-close-up-photography-25xggax4bSA">Halie West</a>
+         on 
+        <a href="https://unsplash.com/">Unsplash</a>
+      </div>
     </div>
     <div class="info-section"></div>
   </div>
