Add intro paragraphs

--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
         <a href="https://unsplash.com/">Unsplash</a>
       </div>
     </div>
-    <div class="info-section"></div>
+    <div class="info-section">
+      <p>This is not a real online service!
+        You know you need something like this in your life to help you realise
+        your deepest dreams. 
+        Sign up <span class="italicised">now</span> to get started.
+      </p>
+      <p>You <span class="italicised">know</span> you want to.</p>
+    </div>
   </div>
 </body>
 </html>
