Add basic form with some styling

--- a/index.html
+++ b/index.html
@@ -28,6 +28,35 @@
         Sign up <span class="italicised">now</span> to get started.
       </p>
       <p>You <span class="italicised">know</span> you want to.</p>
+      <form class="sign-up-form" id="create-account-form" action="" method="post">
+        <h2>Let's do this!</h2>
+        <div class="form-input-container">
+          <span class="form-inputs">
+            <label for="first-name-form-input">FIRST NAME</label>
+            <input id="first-name-form-input" type="text">
+          </span>
+          <div class="form-inputs">
+            <label for="last-name-form-input">LAST NAME</label>
+            <input id="last-name-form-input" type="text">
+          </div>
+          <div class="form-inputs">
+            <label for="email-form-input">EMAIL</label>
+            <input id="email-form-input" type="email">
+          </div>
+          <div class="form-inputs">
+            <label for="telephone-form-input">PHONE NUMBER</label>
+            <input id="telephone-form-input" type="tel">
+          </div>
+          <div class="form-inputs">
+            <label for="password-form-input">PASSWORD</label>
+            <input id="password-form-input" type="password">
+          </div>
+          <div class="form-inputs">
+            <label for="confirm-password-form-input">CONFIRM PASSWORD</label>
+            <input id="confirm-password-form-input" type="password">
+          </div>
+        </div>
+      </form>
     </div>
   </div>
 </body>
