Add create account button

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
           </div>
         </div>
       </form>
+      <button type="submit" form="create-account-form">Create Account</button>
     </div>
   </div>
 </body>
