Add link for current users

--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
         </div>
       </form>
       <button type="submit" form="create-account-form">Create Account</button>
+      <div class="current-user-reference"> Already have an account?
+        <a href="" class="current-user-link">Log in</a>
+      </div>
     </div>
   </div>
 </body>
